# cwyde

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: architecture.md  doxastic-foundations.md  doxastic-semantics.md  evaluation-plan.md  modal-semantics.md  section-propagation.md
examples/: 01_basic_assertion.ipynb  02_indication_detection.ipynb  03_conflict_resolution.ipynb  04_section_propagation.ipynb  05_with_gamen.ipynb  06_findings_impression_consistency.ipynb
scripts/: evaluate_radgraph_xl.py  extract_nubes_cues.py  gen_nb06.py  migrate_pycontext_kb.py  probe_findings_impression.py  spike_gamen_roundtrip.py  spike_pipeline_ordering.py  spike_section_propagator.py  validate_kb.py
src/cwyde/: __init__.py  categories.py  exceptions.py  extensions.py  kb.py  models.py  pipeline.py
src/cwyde/components/: category_mapper.py  conflict_resolver.py  consistency_checker.py  indication_detector.py  section_propagator.py
src/cwyde/formal/: canonical.py  modal.py  strategy.py  translator.py
src/cwyde/lang/: plugin.py  registry.py
src/cwyde/lang/en/: adapter.py
tests/: conftest.py
tests/integration/: test_gamen_bridge.py  test_lang_skeleton_es.py  test_pipeline_e2e.py
tests/reproducibility/: chapman_2011_examples.yaml  harkema_2009_examples.yaml  test_chapman_papers.py
tests/unit/: test_canonical.py  test_categories.py  test_classify_document.py  test_consistency.py  test_evaluate_radgraph_xl.py  test_extensions.py  test_extract_nubes_cues.py  test_kb_loader.py  test_modal.py  test_pseudo_triggers.py  test_translator.py
(+1 files in other folders)
